--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ repositories {
 	mavenCentral()
 }
 
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.TodoAppApplication'
+	}
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
