--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost/graphic_era?autoReconnect=true&useUnicode=true&CharSet=UTF-8&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost/graphic_era?autoReconnect=true&\
+  useUnicode=true&CharSet=UTF-8&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
+server.servlet.context-path=/
