Themaleaf integrated.Login/Logout functionlity done.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost/graphic_era?autoReconnect=true&\
   useUnicode=true&CharSet=UTF-8&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=igdefault
 spring.jpa.hibernate.ddl-auto=create-drop
 server.servlet.context-path=/
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
